Components/Mindtouch Knowledge Migration/Mindtouch Knowledge Migration/objects/Data_Category_Mapping__c.object
<CustomObject>
    <fields>
        <fullName>DataCategoryGroup__c</fullName>
        <label>DataCategoryGroup</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>External_Id__c</fullName>
        <externalId>true</externalId>
        <label>External Id</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>New_Category__c</fullName>
        <label>New Category</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Old_Category__c</fullName>
        <label>Old Category</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Title__c</fullName>
        <label>Title</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>URL_Name__c</fullName>
        <label>URL Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>TF_EX_Data Category Mapping</label>
    <nameField>
        <displayFormat>DCM-{00000}</displayFormat>
        <label>Data Category Mapping Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Data Category Mappings</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>